server_url now always ends in a slash. Document and rely on such.

--- a/rsrc/email/forgotPassword.tmpl
+++ b/rsrc/email/forgotPassword.tmpl
@@ -4,7 +4,7 @@ Hello,
 We received a request to reset the password on your "$email" account. You
 can visit this URL to do so:
 
-${server_url}/#account-resetpw_${memberId}_${code}
+${server_url}#account-resetpw_${memberId}_${code}
 
 If you did not request to have your password changed, you may disregard this
 email. Your password has not yet been changed, and will only be changed if you
