--- a/src/as/msoy.css
+++ b/src/as/msoy.css
@@ -155,14 +155,22 @@ ComboBox {
           scaleGridLeft="5", scaleGridRight="40");
 }
 
-CheckBox {
+/** This is still used in a couple places, let's phase this out eventually. */
+.oldCheckBox {
   borderColor: #403424;
   highlightAlphas: 0, 0;
   fillAlphas: 0, 0, 0.75, 0.65;
   fillColors: #403424, #403424, #ffffff, #eeeeee;
+
+  upIcon: ClassReference(null);
+  downIcon: ClassReference(null);
+  overIcon: ClassReference(null);
+  selectedUpIcon: ClassReference(null);
+  selectedOverIcon: ClassReference(null);
+  selectedDownIcon: ClassReference(null);
 }
 
-.gconfCheckBox {
+CheckBox {
   upIcon: Embed(source="../../rsrc/media/skins/checkbox/checkbox.png");
   overIcon: Embed(source="../../rsrc/media/skins/checkbox/checkbox_over.png");
   downIcon: Embed(source="../../rsrc/media/skins/checkbox/checkbox_over.png");
