Trying to nail down this new black window style. - Nathan got it working, but he put special hacky children inside the panel to do some of the styling. - Bruno's been trying to get it working too. - I need this anyway, so I figured I'd sort it out once and for all.
Well, I have, and the current design as specified by the artists
is infeasible. I was going to argue with them anyway about
the titlebar, which I do not think should be transparent and funky.
It should look like a normal titlebar.
That would allow me to do this business with the borders and get
everythng working, which I can't do now because specifying a border
color makes the title area fill with *that* color behind the
backgroundImage.

--- a/src/as/msoy.css
+++ b/src/as/msoy.css
@@ -48,6 +48,32 @@ TitleWindow {
   closeButtonUpSkin: Embed(source="../../pages/images/ui/close.png");
 }
 
+/**
+ * The new style for our windows.
+ * IN PROGRESS
+ * Unfortunately, if we have a background image, then the background color is also used.
+ * if we have alpha in the image, then the color shows through.
+ * There is no way to turn off the backgroundColor.
+ *
+ * What I'm proposing to the artists is that we don't have a fucking transparent header, because
+ * then I can do the blue border stuff with the "border" styles, and not even have a
+ * background image, but do it purely with the color and alpha.
+ */
+.sexyWindow {
+  titleBackgroundSkin: Embed(source="../../rsrc/media/skins/window/sexy_title.png",
+          scaleGridTop="8", scaleGridBottom="14",
+          scaleGridLeft="8", scaleGridRight="28");
+  backgroundImage: Embed(source="../../rsrc/media/skins/window/sexy_bg.png",
+          scaleGridTop="10", scaleGridBottom="20",
+          scaleGridLeft="10", scaleGridRight="20");
+  backgroundColor: 0;
+  backgroundAlpha: 1;
+  paddingTop: 10px;
+  paddingRight: 10px;
+  paddingBottom: 10px;
+  paddingLeft: 10px;
+}
+
 /** Eventually, all our popups should move to this style. */
 LobbyPanel {
   backgroundImage: none;
@@ -1339,12 +1365,22 @@ fontWeight: bold;
 }
 
 GameOverPanel {
+/*
   borderColor: #408fd9;
-  borderThickness: 3;
+  borderAlpha: 1;
+  borderThicknessLeft: 3;
+  borderThicknessRight: 3;
+  borderThicknessBottom: 3;
+  borderThicknessTop: 0;
+  borderThickness: 0;
   borderSides: "left right bottom";
+  cornerRadius: 8;
+  */
+  /*
   backgroundColor: #000000;
   backgroundAlpha: 0.8;
   backgroundImage: null;
+  */
   titleStyleName: "gameOverTitle";
 }
 
@@ -1360,7 +1396,7 @@ GameOverPanel {
 }
 
 .coinsGameOverPanel {
-  headerHeight: 43;
+  headerHeight: 46;
   titleBackgroundSkin: Embed(source="../../rsrc/media/skins/game/coins_gameover_title.png");
 }
 
