--- a/pages/css/whirleds.css
+++ b/pages/css/whirleds.css
@@ -102,8 +102,8 @@
   position: absolute;
   top: 0px;
   left: 275px;
-  width: 410px;
-  min-height: 200px;
+  width: 360px;
+  min-height: 250px;
   background: transparent url(/images/group/screenshot_bg.png) top center no-repeat;
   text-align: center;
 }
@@ -337,7 +337,7 @@
 .galaxy .Features {
   background: url(/images/group/featured_bg.png) no-repeat top left;
   width: 100%;
-  height: 284px;
+  height: 326px;
 }
 
 .galaxy .Features .Intro {
@@ -381,6 +381,12 @@
   text-align: center;
 }
 
+/*.Flash {
+  position: absolute;
+  top: 46px;
+  left: 52px;
+}
+*/
 .galaxy .Browse {
   width: 100%;
   padding-left: 5px;
@@ -612,7 +618,6 @@
 .myWhirleds .ManagerStar {
   margin-left: 5px;
 }
-
 
 /* ------------------------------------
    EDIT WHIRLED
