Fixed item grid style so that it will take up the available width.

--- a/pages/css/shop.css
+++ b/pages/css/shop.css
@@ -208,3 +208,8 @@
 .listingDetailPanel .messagePanel .Scroller {
   width: 555px;
 }
+
+.itemGridPanel .Contents {
+  margin: 10px;
+  width: 650px;
+}
