--- a/pages/css/whirleds.css
+++ b/pages/css/whirleds.css
@@ -1,4 +1,4 @@
-/** 
+/**
  * $Id$
  *
  * CSS styles for the Whirled interfaces.
@@ -217,7 +217,7 @@
 /* ------------------------------------
    SINGLE WHIRLED DETAIL - RECENT DISCUSSIONS
 -------------------------------------*/
-	
+
 .whirledDetail .WhirledDiscussionPanel {
   padding-bottom: 30px;
 }
@@ -247,7 +247,7 @@
 .whirledDetail .WhirledDiscussionPanel .RSS a:active.RssText {
   text-decoration: underline;
 }
-	
+
 .whirledDetail .WhirledDiscussionPanel .RSS img {
   border: none;
   width: 38px;
@@ -330,7 +330,7 @@
   overflow-x: hidden;
 }
 
-.galaxy .Title, .galaxy .FeaturedWhirled .Name {
+.galaxy .Title {
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 }
 
@@ -348,45 +348,6 @@
   padding: 45px 25px 0px 25px;
 }
 
-.galaxy .Features .FeaturedWhirled {
-  color: #FFFFFF;
-}
-
-.galaxy .Features .FeaturedWhirled .Title {
-  height: 25px;
-  padding-top: 5px;
-  font-weight: bold;
-}
-
-.galaxy .Features .FeaturedWhirled .Name {
-  width: 100%;
-  font-weight: bold;
-  font-size: 16px;
-  text-align: center;
-}
-
-.galaxy .Features .FeaturedWhirled .Name a {
-  color: #FFFFFF;
-}
-
-.galaxy .Features .FeaturedWhirled .Online {
-  font-family: Arial, Helvetica, sans-serif;
-  text-align: center;
-}
-
-.galaxy .Features .FeaturedWhirled .Blurb {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
-  color: #5FA5D8;
-  text-align: center;
-}
-
-/*.Flash {
-  position: absolute;
-  top: 46px;
-  left: 52px;
-}
-*/
 .galaxy .Browse {
   width: 100%;
   padding-left: 5px;
@@ -439,6 +400,66 @@
 
 .galaxy .Create .Button {
   padding-right: 20px;
+}
+
+/* ------------------------------------
+   GALAXY GROUP LIST - FEATURED WHIRLED
+-------------------------------------*/
+
+.galaxy .FeaturedWhirled {
+  color: #FFFFFF;
+}
+
+.galaxy .FeaturedWhirled .Title {
+  height: 25px;
+  padding-top: 5px;
+  font-weight: bold;
+}
+
+.galaxy .FeaturedWhirled .LiveViewOverlay {
+  position: absolute;
+  top: 210px;
+  left: 380px;
+}
+
+.galaxy .FeaturedWhirled .FeaturedWhirledName {
+  width: 100%;
+  font-weight: bold;
+  font-size: 16px;
+  text-align: center;
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  margin-top: 10px
+}
+
+.galaxy .FeaturedWhirled .FeaturedWhirledName a {
+  color: #FFFFFF;
+}
+
+.galaxy .FeaturedWhirled .OnlineBox {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 13px;
+  text-align: center;
+  margin-top: 5px;
+}
+
+.galaxy .FeaturedWhirled .Blurb {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  color: #5FA5D8;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.galaxy .FeaturedWhirled .PrevButton {
+  position: absolute;
+  top: 250px;
+  left: 260px;
+}
+
+.galaxy .FeaturedWhirled .NextButton {
+  position: absolute;
+  top: 250px;
+  left: 570px;
 }
 
 /* ------------------------------------
@@ -624,8 +645,8 @@
 -------------------------------------*/
 
 .groupEditor .tagDetailPanel {
-	padding: 10px;
-	border: solid black 1px;
+    padding: 10px;
+    border: solid black 1px;
 }
 
 .photoChoiceBox .Preview {
