--- a/src/as/msoy.css
+++ b/src/as/msoy.css
@@ -77,7 +77,7 @@ TitleWindow {
   */
   cornerRadius: 4;
   backgroundColor: #000000;
-  backgroundAlpha: 0.8;
+  backgroundAlpha: 0.85;
   backgroundImage: null;
   titleBackgroundSkin: Embed(source="../../rsrc/media/skins/window/sexy_title.png",
           scaleGridTop="8", scaleGridBottom="14",
@@ -485,6 +485,7 @@ TabNavigator, TabBar {
   backgroundSize: "100%";
   horizontalGap: 10;
   verticalAlign: "bottom";
+  paddingBottom: 1;
 }
 
 .controlBarButtonSend {
@@ -1342,7 +1343,7 @@ fontWeight: bold;
   borderStyle: "solid";
   borderThickness: 2;
   cornerRadius: 3;
-  backgroundAlpha: 0.8;
+  backgroundAlpha: 0.85;
   verticalGap: 0;
 }
 
@@ -1385,7 +1386,7 @@ GameOverPanel {
           scaleGridLeft="8", scaleGridRight="211");
   headerHeight: 36;
   backgroundColor: black;
-  backgroundAlpha: 0.8;
+  backgroundAlpha: 0.85;
   backgroundImage: null;
   paddingTop: 0;
   paddingBottom: 0;
@@ -1400,7 +1401,7 @@ GameOverPanel {
           scaleGridLeft="8", scaleGridRight="315");
   headerHeight: 36;
   backgroundColor: black;
-  backgroundAlpha: 0.8;
+  backgroundAlpha: 0.85;
   backgroundImage: null;
   paddingTop: 0;
   paddingBottom: 0;
@@ -1409,18 +1410,12 @@ GameOverPanel {
   verticalGap: 0;
 }
 
-.shareWindow {
+/*
+ShareDialog {
   titleBackgroundSkin: Embed(source="../../rsrc/media/skins/share_popup_header.png");
   headerHeight: 36;
-  backgroundColor: black;
-  backgroundAlpha: 0.8;
-  backgroundImage: null;
-  paddingTop: 0;
-  paddingBottom: 0;
-  paddingLeft: 0;
-  paddingRight: 0;
-  verticalGap: 0;
 }
+*/
 
 .copyButton {
   upSkin: Embed(source="../../rsrc/media/skins/button/copy.png");
