--- a/pages/css/me.css
+++ b/pages/css/me.css
@@ -180,7 +180,8 @@
 .passport {
   background: #1d5883;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
+  padding-bottom: 5px;
 }
 
 .passport .NextPanel {
