--- a/pages/css/gwt.css
+++ b/pages/css/gwt.css
@@ -947,6 +947,10 @@ img, embed, applet, object {
   padding-left: 10px;
 }
 
+.messagePanel .RightPad {
+  padding-right: 10px;
+}
+
 .messagePanel .BottomPad {
   padding-bottom: 5px;
 }
